* Rewrote select box navigation logic to match normal select boxes' behavior as much as possible. Basically, clicking outside of an opened select box or pressing the Space bar will revert the selection to the original's. Pressing Return will confirm it. Same for Tab, although in this case it's different from the original behavior (a personal preference.) Behavior is also buggy in conjunction with the post editor, because of conflicting events. Ahh well. Can't have everything... Current gzipped size: 2110 bytes. Still acceptable. (sbox.js) * Added a small hack to the post editor to specify a tabindex on select boxes in such a way that they'll be seen in the order they appear, rather than after all elements have been tabbed through. (Class-Editor.php) ! Fixed a couple of issues due to select box animations not being properly completed and breaking subsequent actions. (sbox.js) ! Non-dropdown select boxes such as the local avatar selector were made invisible. Oops. (index.css) ! Fixed styling for post editor's select boxes. Should be good now... (sections.css)

--- a/Themes/default/skins/index.css
+++ b/Themes/default/skins/index.css
@@ -392,6 +392,8 @@ form
 
 select
 	visibility: hidden
+select[size]
+	visibility: visible
 
 input, select, textarea
 	font: 95%/115% $main_font
@@ -1283,7 +1285,6 @@ select.sb
 	.text extends .inline-block
 		vertical-align: baseline
 		white-space: nowrap
-		text-overflow: ellipsis
 
 	.details
 		font-style: italic
